# norsk-lovtidend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
data/xml/1982/LTI/: nl-19820108-001.xml  nl-19820319-002.xml  nl-19820326-003.xml  nl-19820326-004.xml  nl-19820326-005.xml  nl-19820326-006.xml  nl-19820326-007.xml  nl-19820326-008.xml  nl-19820326-009.xml  nl-19820326-010.xml  nl-19820416-011.xml  nl-19820416-012.xml  nl-19820507-013.xml  nl-19820514-014.xml  nl-19820514-015.xml  nl-19820514-016.xml  nl-19820514-017.xml  nl-19820514-018.xml  nl-19820514-019.xml  nl-19820514-020.xml  nl-19820514-021.xml  nl-19820514-022.xml  nl-19820514-023.xml  nl-19820514-024.xml  nl-19820521-025.xml  nl-19820521-026.xml  nl-19820521-027.xml  nl-19820521-028.xml  nl-19820521-029.xml  nl-19820521-030.xml  nl-19820521-031.xml  nl-19820528-032.xml  nl-19820611-033.xml  nl-19820611-034.xml  nl-19820611-035.xml  nl-19820611-036.xml  nl-19820611-037.xml  nl-19820611-038.xml  nl-19820611-039.xml  nl-19820611-040.xml  (+629 more)
data/xml/1983/LTI/: nl-19830107-001.xml  nl-19830218-002.xml  nl-19830304-003.html  nl-19830304-004.xml  nl-19830304-005.xml  nl-19830304-006.xml  nl-19830304-007.html  nl-19830311-008.xml  nl-19830311-009.xml  nl-19830318-010.xml  nl-19830318-011.xml  nl-19830325-012.xml  nl-19830325-013.xml  nl-19830408-014.xml  nl-19830408-015.html  (+678 more)
scripts/: uv.sh
src/lovtidend/: __init__.py  cache.py  checkpoint.py  display.py  scraper.py
tests/: test_checkpoint_resume.py  test_download_retry.py  test_pagination.py  test_start_url.py  test_target_path.py
(+15936 files in other folders)
